--- a/index.html
+++ b/index.html
@@ -16,46 +16,47 @@
     <video id="video" class="bg-video" loop autoplay autobuffer muted>
       <source src="timelapse.mp4" type="video/mp4">
     </video>
+	
   </div>
-
+ 
   <div id="large-header" class="large-header">
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
-    <h1 class="main-title">Nick <span class="thin">Aroot</span></h1>
-    <p class="sub-title">Choose Your Way.&nbsp;&nbsp;&nbsp;Trust In The Future.</p>
+    <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
+    <p class="sub-title">Isn't life beautiful?&nbsp;&nbsp;&nbsp;I think that life is beautiful.</p>
     <div class="socials">
-      <a href="https://vk.com/nickaroot" target="_blank" class="icon vk" id="vk">
+      <a href="https://vk.com/0id088" target="_blank" class="icon vk" id="vk">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/vk.svg">
       </a>
-      <a href="https://fb.com/nickaroot" target="_blank" class="icon facebook" id="facebook">
+      <a href="https://www.facebook.com/100015421668267" target="_blank" class="icon facebook" id="facebook">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/facebook.svg">
       </a>
-      <a href="https://telegram.me/nickaroot" target="_blank" class="icon telegram" id="telegram">
+      <a href="https://teleg.run/madmazeul" target="_blank" class="icon telegram" id="telegram">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/telegram.svg">
       </a>
-      <a href="https://instagram.com/nickaroot" target="_blank" class="icon instagram" id="instagram">
+      <a href="https://instagram.com/outcuster13" target="_blank" class="icon instagram" id="instagram">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/instagram-logo.svg">
       </a>
-      <a href="https://github.com/nickaroot" target="_blank" class="icon github" id="github">
+      <a href="https://github.com/0utcuster" target="_blank" class="icon github" id="github">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/github-logo.svg">
       </a>
-      <a href="mailto:nickaroot@icloud.com" target="_blank" class="icon email" id="email">
+      <a href="mailto:outcuster@gmail.com" target="_blank" class="icon email" id="email">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
