--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 </head>
 
 <body>
+<style>
+body {
+cursor: url(Images/Pointer.cur),url(arrow_ultra.cur),default;
+
+}
+</style>
   <div class="wrapper">
     <video id="video" class="bg-video" loop autoplay autobuffer muted>
       <source src="timelapse.mp4" type="video/mp4">
     </video>
+	
+	<audio controls>
+  <source src="rabbit.mp3" type="audio/mp3">
+	</audio>
 	
   </div>
  
@@ -24,7 +34,7 @@
   </div>
   <div class="text-wrapper">
     <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
-    <p class="sub-title">Isn't life beautiful?&nbsp;&nbsp;&nbsp;I think that life is beautiful.</p>
+    <p class="sub-title">Who am I?&nbsp;&nbsp;&nbsp;I do not know either</p>
     <div class="socials">
       <a href="https://vk.com/0id088" target="_blank" class="icon vk" id="vk">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
