--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
 <body>
 <style>
+.cross { cursor: crosshair; }
+   .help { cursor: help; }
+   .pointer { cursor: pointer;}
 body {
-cursor: url(Images/Pointer.cur),url(arrow_ultra.cur),default;
+cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 
 }
 </style>
@@ -34,7 +37,7 @@ cursor: url(Images/Pointer.cur),url(arrow_ultra.cur),default;
   </div>
   <div class="text-wrapper">
     <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
-    <p class="sub-title">Who am I?&nbsp;&nbsp;&nbsp;I do not know either</p>
+    <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I do not know either</p>
     <div class="socials">
       <a href="https://vk.com/0id088" target="_blank" class="icon vk" id="vk">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
