--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
     </video>
 	
 	<audio controls>
-  <source src="rabbit.mp3" type="audio/mp3">
+ <audio autoplay loop controls src="rabbit.mp3" ></audio>
 	</audio>
 	
   </div>
@@ -37,7 +37,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
   </div>
   <div class="text-wrapper">
     <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
-    <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I do not know either</p>
+    <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I don't know either</p>
     <div class="socials">
       <a href="https://vk.com/0id088" target="_blank" class="icon vk" id="vk">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
