--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 }
 </style>
   <div class="wrapper">
-    <video id="video" class="bg-video" loop autoplay autobuffer muted>
+    <video id="video" class="bg-video" loop autoplay autobuffer controls>
       <source src="timelapse.mp4" type="video/mp4">
     </video>
 	
@@ -32,7 +32,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 	
   </div>
  
-  <div id="large-header" class="large-header">
+  <div id="large-header" class="кто прочитал пидор"> <!ТУТ НАДА LARGE_HEADER В КАВЫЧКАХ ЕС ЧО >
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
