--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
     </video>
 	
 	<audio controls>
- <audio autoplay loop controls src="rabbit.mp3" ></audio>
+ <audio  loop controls src="rabbit.mp3" ></audio>
 	</audio>
 	
   </div>
