--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 			var videoArray = [
 			'video1.mp4',
 			'video2.mp4',
-			'video3.mp4'
+			'video3.mp4',
+			'video4.mp4',
+			'video5.mp4',
+			'video6.mp4',
+			'video7.mp4'
 			];
 		var count = Math.floor(Math.random() * videoArray.length);
 		document.getElementsByTagName('source')[0].src = 'videos/' + videoArray[count];
@@ -45,7 +49,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
-    <p class="sub-title help">(update to change music)</p>
+    <p class="sub-title">(update to change music)</p>
     <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
     <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I don't know either</p>
     <div class="socials">
