--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
   </div>
   <div class="text-wrapper">
     <p class="sub-title">(update to change music)</p>
-    <h1 class="main-title">OUTCUSTER <span class="thin"></span></h1>
+    <h1 class="main-title">LILCUSTER <span class="thin"></span></h1>
     <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I don't know either</p>
     <div class="socials">
 	
