--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Outcuster</title>
+  <title>LILCUSTER</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -33,7 +33,8 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 			'video4.mp4',
 			'video5.mp4',
 			'video6.mp4',
-			'video7.mp4'
+			'video7.mp4',
+			'video8.mp4'
 			];
 		var count = Math.floor(Math.random() * videoArray.length);
 		document.getElementsByTagName('source')[0].src = 'videos/' + videoArray[count];
