--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 			'video3.mp4',
 			'video4.mp4',
 			'video5.mp4',
-			'video6.mp4',
-			'video7.mp4',
-			'video8.mp4'
+			
 			];
 		var count = Math.floor(Math.random() * videoArray.length);
 		document.getElementsByTagName('source')[0].src = 'videos/' + videoArray[count];
@@ -50,9 +48,11 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
-    <p class="sub-title">(update to change music)</p>
+    <p refresh style="color:#F5FFFA" class="sub-title">(update to change music ↻)</p>
     <h1 class="main-title">LILCUSTER <span class="thin"></span></h1>
-    <p class="sub-title help">Who am I?&nbsp;&nbsp;&nbsp;I don't know either</p>
+   <a href="ССЫЛКА НА ПЕСНЮ" </a> 
+   <p style="color:#FFE4E1" class="sub-title pointer">«Trap Dream»&nbsp;&nbsp;&nbsp;At all sites 🔗</p> 
+
     <div class="socials">
 	
       <a href="https://vk.com/0id088" target="_blank" class="icon vk" id="vk">
@@ -73,23 +73,23 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
         </svg>
         <img src="img/telegram.svg">
       </a>
-      <a href="https://instagram.com/outcuster13" target="_blank" class="icon instagram" id="instagram">
+      <a href="https://instagram.com/lilcuster13" target="_blank" class="icon instagram" id="instagram">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
         <img src="img/instagram-logo.svg">
       </a>
-      <a href="https://github.com/0utcuster" target="_blank" class="icon github" id="github">
+      <a href="https://www.youtube.com/channel/UCEYBIU340wjyx3fOUu0YchA" target="_blank" class="icon github" id="github">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
-        <img src="img/github-logo.svg">
+        <img src="img/youtube.svg">
       </a>
-      <a href="mailto:outcuster@gmail.com" target="_blank" class="icon email" id="email">
+      <a href="https://vk.com/lilcuster" target="_blank" class="icon email" id="email">
         <svg  preserveAspectRatio="xMinYMin meet" viewBox="0 0 200 200" class="circle">  
           <circle cx="100" cy="100" r="50"/>
         </svg>
-        <img src="img/email.svg">
+        <img src="img/music.svg">
 		      </a>
 			  
 				     
