--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
-    <p refresh style="color:#F5FFFA" class="sub-title">(update to change music ↻)</p>
+    <p style="color:#F5FFFA" class="sub-title">(update to change music ↻)</p>
     <h1 class="main-title">LILCUSTER <span class="thin"></span></h1>
    <a href="ССЫЛКА НА ПЕСНЮ" </a> 
    <p style="color:#FFE4E1" class="sub-title pointer">«Trap Dream»&nbsp;&nbsp;&nbsp;At all sites 🔗</p> 
