--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 	
   </div>
  
-  <div id="large-header" class="кто прочитал пидор"> <!ТУТ НАДО LARGE_HEADER В КАВЫЧКАХ ЕС ЧО >
+  <div id="large-header" class="кто прочитал пидор"> <!тут надо LARGE_HEADER если шо)>
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
     <p style="color:#F5FFFA" class="sub-title">(update to change music ↻)</p>
     <h1 class="main-title">LILCUSTER <span class="thin"></span></h1>
-   <a href="ССЫЛКА НА ПЕСНЮ" </a> 
-   <p style="color:#FFE4E1" class="sub-title pointer">«Trap Dream»&nbsp;&nbsp;&nbsp;At all sites 🔗</p> 
+   <a href="https://band.link/NcYtm" </a> 
+   <p style="color:#FFE4E1" class="sub-title pointer">«Air Monger»&nbsp;&nbsp;&nbsp;At all sites 🔗</p> 
 
     <div class="socials">
 	
