--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
 	
   </div>
  
-  <div id="large-header" class="кто прочитал пидор"> <!тут надо LARGE_HEADER если шо)>
+  <div id="large-header" class="XXX"> <!тут надо LARGE_HEADER на всякий)>
     <canvas id="demo-canvas"></canvas>
   </div>
   <div class="text-wrapper">
