--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ cursor: url(working_ultra),url(arrow_ultra.cur),	pointer;
   <div class="text-wrapper">
     <p style="color:#F5FFFA" class="sub-title">(update to change music ↻)</p>
     <h1 class="main-title">LILCUSTER <span class="thin"></span></h1>
-   <a href="https://band.link/NcYtm" </a> 
-   <p style="color:#FFE4E1" class="sub-title pointer">«Air Monger»&nbsp;&nbsp;&nbsp;At all sites 🔗</p> 
+   <a href="https://band.link/PYxVF" </a> 
+   <p style="color:#FFE4E1" class="sub-title pointer">«25 кадр»&nbsp;&nbsp;&nbsp;At all sites 📻</p> 
 
     <div class="socials">
 	
